@@ -211,4 +211,10 @@ unshare容器和rootless容器会始终在执行命令前fork()自身一次，
 ```
 -i, --hidepid 1/2 ...........................: /proc挂载的hidepid选项
 ```
-例如 `-i 1`
+例如 `-i 1`      
+*********
+```
+-b, --background ............................: 后台运行
+-L, --logfile [file] ........................: 日志文件，用于-b参数
+```
+后台运行ruri并输出到日志。      
