@@ -12,6 +12,8 @@
   * Add `-I` option: `--char-dev`.
   * Add `-i` option: `--hide-pid`.
   * Add `-T` option: `--timens-offset`.
+  * Add `-b` option: `--background`.
+  * Add `-L` option: `--log-file`.
   * `-c` option can now recognize other args and command to run.
   * `-U` and `-P` option can now use config file.
   * Rewrite cgroup support, add cpupercent limit support.
